--- a/index.html
+++ b/index.html
@@ -1,6 +1,16 @@
 <html>
+  <script crossorigin src="https://unpkg.com/react@17/umd/react.production.min.js"></script>
+  <script crossorigin src="https://unpkg.com/react-dom@17/umd/react-dom.production.min.js"></script>
+  <script src="https://unpkg.com/react-flip-move/dist/react-flip-move.js"></script>
+  <head>
+    <style>
+     .vid {
+       position: absolute
+     }
+    </style>
+  </head>
   <body>
-    <div>
+    <div id="global" style="height: 100%; width: 100%">
       <iframe
           src="https://player.twitch.tv/?channel=liam&parent=jasontrigg0.github.io&muted=true"
           height="720"
@@ -8,5 +18,46 @@
           allowfullscreen="true">
       </iframe>
     </div>
+    <div>
+    </div>
   </body>
+  <script>
+    const title  = React.createElement(FlipMove, {typeName: "ul"}, [React.createElement("li", {key: "l1"}, "l1"), React.createElement("li", {key: "l2"}, "l2")]);
+    ReactDOM.render(title, document.getElementById('global'));
+
+    function fetchData() {
+      console.log('Fetching updated data.');
+      let xhr = new XMLHttpRequest();
+      xhr.open("GET", "https://firestore.googleapis.com/v1beta1/projects/jtrigg-50e45/databases/(default)/documents/main/dump", true);
+      xhr.onload = function() {
+        alert(JSON.parse(xhr.response)["fields"]["pace-pal"]["stringValue"]);
+      }
+      xhr.send();
+    }
+   function shuffleArray(array) {
+     for (let i = array.length - 1; i > 0; i--) {
+       const j = Math.floor(Math.random() * (i + 1));
+       [array[i], array[j]] = [array[j], array[i]];
+     }
+   }
+   fetchData();
+   function sleep(ms) {
+     return new Promise(resolve => setTimeout(resolve, ms));
+   }
+   async function mainLoop() {
+     while (true) {
+       const runners = ['liquidwifi','armadaugs','gothiclogic','coolkid'];
+       shuffleArray(runners);
+       const children = runners.map((x,i) => {
+         const url = "https://player.twitch.tv/?channel="+x+"&parent=jasontrigg0.github.io&muted=true";
+         return React.createElement("div", {key: x, class: "vid", style:{left:0.5*window.innerWidth*(i%2), top:0.5*window.innerHeight*(i>1)}}, React.createElement("iframe", {src: url, width: 0.5*window.innerWidth - 20, height: 0.5*window.innerHeight - 20}));
+       });
+       console.log(children);
+       const title = React.createElement(FlipMove, {typeName: "div"}, children);
+       ReactDOM.render(title, document.getElementById('global'));
+       await sleep(15000);
+     }
+   }
+   mainLoop();
+  </script>
 </html>
