--- a/index.html
+++ b/index.html
@@ -1,30 +1,39 @@
 <html>
-  <script crossorigin src="https://unpkg.com/react@17/umd/react.production.min.js"></script>
-  <script crossorigin src="https://unpkg.com/react-dom@17/umd/react-dom.production.min.js"></script>
-  <script src="https://unpkg.com/react-flip-move/dist/react-flip-move.js"></script>
   <head>
     <style>
-     .vid {
+     .container {
        position: absolute
+     }
+     .embed {
+       width: 50%;
+       height: 50%;
+       position: absolute;
+     }
+     #pos1 {
+       left: 0;
+       top: 0;
+     }
+     #pos2 {
+       left: 50%;
+       top: 0;
+     }
+     #pos3 {
+       left: 0;
+       top: 50%;
+     }
+     #pos4 {
+       left: 50%;
+       top: 50%;
      }
     </style>
   </head>
   <body>
-    <div id="global" style="height: 100%; width: 100%">
-      <iframe
-          src="https://player.twitch.tv/?channel=liam&parent=jasontrigg0.github.io&muted=true"
-          height="720"
-          width="1280"
-          allowfullscreen="true">
-      </iframe>
+    <div id="global" style="height: 100%; width: 100%; position:relative">
     </div>
     <div>
     </div>
   </body>
   <script>
-    const title  = React.createElement(FlipMove, {typeName: "ul"}, [React.createElement("li", {key: "l1"}, "l1"), React.createElement("li", {key: "l2"}, "l2")]);
-    ReactDOM.render(title, document.getElementById('global'));
-
     function fetchData() {
       console.log('Fetching updated data.');
       let xhr = new XMLHttpRequest();
@@ -45,21 +54,24 @@
      return new Promise(resolve => setTimeout(resolve, ms));
    }
    async function mainLoop() {
-     let embeds = {}
+     let embeds = {};
      while (true) {
        const runners = ['liquidwifi','armadaugs','gothiclogic','coolkid'];
        shuffleArray(runners);
-       const children = runners.map((x,i) => {
+       runners.forEach((x,i) => {
+         const id = `pos${i+1}`;
          if (!embeds[x]) {
            let url = "https://player.twitch.tv/?channel="+x+"&parent=jasontrigg0.github.io&muted=true";
-           embeds[x] = React.createElement("iframe", {src: url, width: 0.5*window.innerWidth - 20, height: 0.5*window.innerHeight - 20});
+           let iframe = document.createElement("iframe", {id: id});
+           iframe.src = url;
+           iframe.className = "embed";
+           document.getElementById('global').appendChild(iframe);
+           embeds[x] = iframe;
+         } else {
+           embeds[x].id = id;
          }
-         return React.createElement("div", {key: x, class: "vid", style:{left:0.5*window.innerWidth*(i%2), top:0.5*window.innerHeight*(i>1)}}, embeds[x]);
        });
-       console.log(children);
-       const title = React.createElement(FlipMove, {typeName: "div"}, children);
-       ReactDOM.render(title, document.getElementById('global'));
-       await sleep(15000);
+       await sleep(3000);
      }
    }
    mainLoop();
